# anq-aiops

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
ansible/: disk_cleanup.yml  inventory.ini  service_restart.yml
docs/: AIOps 集群说明.md  hermes-knowledge.md  meta-monitoring.md  multi-agent-coordination.md  policy-mode.md  sop-feedback.md  zabbix-integration.md  生产级 AIOps 架构设计.md
docs/scripts/: fill-disk-varlog.sh  fill-disk.sh  inject-faults.ps1  stop-nginx.sh  stop-redis.sh  stop-services.ps1  stress-cpu.sh  stress-memory.sh
meta_monitor/: .env.example  Dockerfile  __init__.py  feishu_alert.py  healthcheck.py  probes.py
src/: config.py  feishu_listener.py  main.py  models.py
src/activities/: audit.py  coordination.py  feishu.py  incident_summary.py  llm.py  policy.py  runbook.py  sop_generator.py
src/api/: webhook.py
src/bus/: consumer.py  producer.py
src/coordination/: __init__.py  mutex.py  rate_limit.py
src/correlator/: __init__.py  correlate.py  groups.py  llm_judge.py  quick_filter.py
src/hermes/: __init__.py  db.py  feedback.py  models.py  (+5 more)
tests/: test_activities_llm.py  test_agent.py  test_audit.py  test_bus.py  test_coordination.py  test_correlator.py  test_feedback.py  test_feishu.py  test_hermes_knowledge.py  test_hermes_repository.py  test_incident_summary.py  test_llm.py  test_llm_prompts.py  test_meta_monitor.py  test_models.py  test_policy_activity.py  test_policy_engine.py  test_runbooks.py  test_sop_generator.py  test_webhook.py  test_workflow.py
(+30 files in other folders)
